--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -8,20 +8,6 @@ h1 {
     border-bottom: 1px solid #eee;
 }
 
-.heading {
-    font-size: 2.25em;
-    margin: 20px 0;
-
-    a {
-        color: $white;
-
-        &:hover {
-            color: $primary;
-            text-decoration: none;
-        }
-    }
-}
-
 button:focus {
     outline:0;
 }
